# Simplex-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  hello.cpp  test.cpp  todo.txt
apps/: CMakeLists.txt  example.cpp  main.cpp
include/: LinAlg.h  Matrix.h  Simplex.h  Util.h  Utils.h
src/: LinAlg.cpp  Matrix.cpp  Simplex.cpp  Util.cpp  Utils.cpp  main.cpp
src/linalg/: CMakeLists.txt
src/linalg/core/: CMakeLists.txt  matrix.cpp  matrix.hpp
src/linalg/ops/: CMakeLists.txt  basic.cpp  basic.hpp
src/simplex/: CMakeLists.txt
test/: CMakeLists.txt  sample_test.cpp  unit_testing.cpp
